# mcp-chainlit-project

./: .gitignore  app.py  main.py  pyproject.toml
Notebooks/: main.ipynb  tools.py
